
- Moved the publicationtraverse module to zope.traversing, removing the
  zope.app.publisher -> zope.app.publication dependency (which was a
  cycle).

- Moved IHTTPException to zope.publisher, removing the dependency
  on zope.app.http.

- Moved the DefaultViewName API from zope.app.publisher.browser to
  zope.publisher.defaultview, making it accessible to other packages
  that need it.

3.6.0 (2009-05-18)
------------------

- Use ``zope:adapter`` ZCML directive instead of ``zope:view``.
  This avoid dependency on ``zope.app.component``.

- Update imports from ``zope.app.security`` to ``zope.authentication`` and
  ``zope.principalregistry``.

- Use ``zope.browser.interfaces.ISystemError`` to avoid dependency on
  ``zope.app.exception``.

- Refactored tests so they can run successfully with ZODB 3.8 and 3.9.

3.5.3 (2009-03-13)
------------------

- Adapt to the removal of IXMLPresentation from zope.app.publisher which
  was removed to adapt to removal of deprecated interfaces from zope.component.

3.5.2 (2009-03-10)
------------------

- Use ISkinnable.providedBy(request) instead of IBrowserRequest as condition
  for calling setDefaultSkin. This at the same time removes dependency to
  the browser part of zope.publisher.

- Remove deprecated code.

- Use built-in set class instead of the deprecated sets.Set and thus
  don't cause deprecation warning in Python 2.6.

3.5.1 (2009-01-31)
------------------

- Import ISite from zope.location.interfaces instead of deprecated place
  in zope.app.component.interfaces.

3.5.0 (2008-10-09)
------------------

- Now ``zope.app.publication.zopepublication.ZopePublication`` annotates the
  request with the connection to the main ZODB when ``getApplication`` is
  called.

- Removed support for non-existent Zope versions.


3.4.3 (2007-11-01)
------------------

- Removed unused imports.

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.4.2 (2007-09-26)
------------------

- Added missing files to egg distribution.

