@@ -57,6 +57,7 @@ setup(name='zope.app.publication',
               'zope.app.publisher',
               'zope.app.zptpage',
               'zope.principalregistry',
+              'zope.app.applicationcontrol>=3.5.0',
               ]),
     install_requires=['zope.interface',
                       'ZODB3',
@@ -65,7 +66,6 @@ setup(name='zope.app.publication',
                       'zope.deferredimport',
                       'zope.error',
                       'zope.i18n',
-                      'zope.app.applicationcontrol',
                       'zope.browser>=1.2',
                       'zope.publisher>=3.8.0',
                       'zope.traversing>=3.7.0',
