@@ -16,6 +16,9 @@ CHANGES
   zope.publisher.defaultview, making it accessible to other packages
   that need it.
 
+- Look up the application controller through a utility registration
+  rather than a direct reference.
+
 3.6.0 (2009-05-18)
 ------------------
 
